--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@babel/preset-react": "^7.22.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
